apply changes that required